# dataformats-serde

./: CMakeLists.txt
cmake/: dataformats-serdeConfig.cmake.in
include/dataformats-serde/: FragmentSerDe.hpp  TriggerRecordHeaderSerDe.hpp
unittest/: FragmentSerDe_test.cxx  TriggerRecordHeaderSerDe_test.cxx
